--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (library
     (name Revery)
     (public_name Revery)
-    (libraries lwt lwt.unix reglfw Revery_Core Revery_Math Revery_Shaders Revery_Geometry Revery_UI Revery_UI_Components))
+    (libraries lwt lwt.unix reglfw Revery_Core Revery_Math Revery_Shaders Revery_Geometry Revery_UI Revery_UI_Components Revery_Native))
