--- a/src/Native/dune
+++ b/src/Native/dune
@@ -3,6 +3,7 @@
     (public_name Revery_Native)
     (preprocess (pps lwt_ppx))
     (library_flags (:include flags.sexp))
+    (js_of_ocaml (javascript_files dialog.js))
     (c_names dialog_cocoa dialog_win32)
     (cxx_names dialog)
     (c_flags (:include c_flags.sexp))
