--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,11 @@
+# Declare shell files to have LF endings on checkout
+# On Windows, the default git setting for `core.autocrlf`
+# means that when checking out code, LF endings get converted
+# to CRLF. This causes problems for shell scripts, as bash
+# gets choked up on the extra `\r` character.
+*.sh text eol=lf
+
+# Hide lockfile updates
 *esy.lock/* linguist-generated
+
+
