--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,14 +34,15 @@ jobs:
     vmImage: 'macOS 10.13'
 
   variables:
-    STAGING_DIRECTORY: /Users/vsts/STAGING
-    STAGING_DIRECTORY_UNIX: /Users/vsts/STAGING
-    ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i
-    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source/i
+    STAGING_DIRECTORY: /Users/runner/STAGING
+    STAGING_DIRECTORY_UNIX: /Users/runner/STAGING
+    ESY__CACHE_INSTALL_PATH: /Users/runner/.esy/3____________________________________________________________________/i
+    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/runner/.esy/source/i
     # ESY__NPM_ROOT: /usr/local/lib/node_modules/esy
 
   steps:
-  - script: ls /Users
+  - script: ls /Users/runner
+  - script: ls /Users/Shared
   - script: brew update
   - script: brew install libpng ragel
   - script: node --version
